# Qt

./: .gitignore  .gitmodules  README.md
3D/WorkingWithAssets/: CMakeLists.txt  Main.qml  Monkey.qml  main.cpp  resources.qrc
Beginner/: .gitignore
Beginner/01-HelloWorld/: CMakeLists.txt  main.cpp
Beginner/02-Classes/: CMakeLists.txt  animal.cpp  animal.h  laptop.cpp  laptop.h  main.cpp
Beginner/03-Inheritence/: CMakeLists.txt  animal.cpp  animal.h  canine.cpp  canine.h  feline.cpp  feline.h  main.cpp  mammal.cpp  mammal.h
Beginner/04-PointerMemoryManagement/: CMakeLists.txt  main.cpp
Beginner/05-AutomaticMemoryManagement/: CMakeLists.txt  main.cpp  test.cpp  test.h
Beginner/06-SignalAndSlots/: CMakeLists.txt  destination.cpp  destination.h  main.cpp  source.cpp  source.h
Beginner/07-SignalAndSlotDisconnecting/: CMakeLists.txt  main.cpp  radio.cpp  radio.h  station.cpp  station.h
Beginner/08-Q_Property/: CMakeLists.txt  main.cpp  test.cpp  test.h  watcher.cpp  watcher.h
Beginner/09-TimersWithSignalAndSlot/: CMakeLists.txt  main.cpp  test.cpp  test.h
Beginner/10-TemplateSimple/: CMakeLists.txt  main.cpp
Beginner/11-TemplateIssues/: CMakeLists.txt  main.cpp
Beginner/12-QtDateAndTime/: CMakeLists.txt  main.cpp
Beginner/13-QMap/: CMakeLists.txt  main.cpp  pet.cpp  pet.h
Beginner/14-QListWidget/: CMakeLists.txt  widget.cpp  widget.h  widget.ui
Beginner/15-QTabWidget/: CMakeLists.txt  main.cpp  widget.cpp  widget.h  widget.ui
Beginner/16-QDialog/: CMakeLists.txt  infodialog.cpp  infodialog.h  infodialog.ui  widget.cpp  widget.h  widget.ui
Beginner/17-QFileDialog/: CMakeLists.txt  widget.cpp  widget.h  widget.ui
Beginner/18-QInputDialog/: CMakeLists.txt  widget.cpp  widget.ui
Beginner/19-QSettingsExample/: CMakeLists.txt  widget.cpp  widget.h  widget.ui
Beginner/20-QPalette/: CMakeLists.txt  widget.cpp  widget.h  widget.ui
Beginner/21-WorkingWithStyleSheet/: CMakeLists.txt  customdialog.cpp  customdialog.h  customdialog.ui  main.cpp  widget.cpp  widget.ui
Beginner/22-StyleSheetAsExternalResources/: CMakeLists.txt  main.cpp  resource.qrc  suredialog.cpp  suredialog.h  suredialog.ui  widget.cpp  widget.h  widget.ui
Beginner/22-StyleSheetAsExternalResources/styles/: styles.css
Beginner/23-QFiles/: CMakeLists.txt  widget.cpp  widget.h  widget.ui
Beginner/24-QDir/: CMakeLists.txt  main.cpp  widget.cpp  widget.h  widget.ui
Beginner/25-QNetworkAccessManager/: CMakeLists.txt  widget.cpp  widget.h  widget.ui
HelloFTP/: CMakeLists.txt  data.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
HelloFTPQML/: CMakeLists.txt  Main.qml  ftpmanager.cpp  ftpmanager.h  main.cpp
Projects/AccelerometerVisualizer/: CMakeLists.txt  Main.qml  main.cpp  resources.qrc  serialmanager.cpp  serialmanager.h
Projects/AccelerometerVisualizerBluetooth/: AccelerometerVisualizerBluetooth.pro  CMakeLists.txt  bluetoothmanager.cpp  bluetoothmanager.h  main.cpp  main.qml  resources.qrc
Projects/FXOS8700_Visualizer/: CMakeLists.txt  Main.qml  main.cpp  serialmanager.cpp  serialmanager.h
Projects/MQTT_DeviceControl/: CMakeLists.txt  ColorSlider.qml  CustomButton.qml  CustomSlider.qml  CustomSwitch.qml  Main.qml  main.cpp  mqtthandler.cpp  mqtthandler.h
QCustomPlot/01-BasicPlotting/: CMakeLists.txt  mainwindow.cpp  mainwindow.ui
QCustomPlot/02-SimplePlotOfTwoGraphs/: CMakeLists.txt  mainwindow.cpp  mainwindow.ui
QCustomPlot/03-PlottingMultipleAxesAdvancedStyling/: CMakeLists.txt  mainwindow.cpp  mainwindow.ui
QCustomPlot/04-PlottingDateAndTimeData/: CMakeLists.txt  mainwindow.cpp  mainwindow.ui
QCustomPlot/05-SubplotUsingOfflineData/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
QCustomPlot/RealTimeDataDemo/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
QML/: .gitignore
QML/01-HelloWorld/: main.qml
QML/Animation/: CMakeLists.txt  main.cpp  main.qml
QML/BasicStates/: CMakeLists.txt  MyBox.qml  main.cpp  main.qml
QML/ColorButton/: CMakeLists.txt  ColorButton.qml  Resources.qrc  main.cpp  main.qml
QML/DiceRoller/: CMakeLists.txt  DiceDelegate.qml  DiceModel.qml  main.cpp  main.qml
QML/DragDrop/: CMakeLists.txt  main.cpp  main.qml
QML/DynamicObjectCreation/: CMakeLists.txt  NumberPad.qml  main.cpp  main.qml
QML/FolderFilesTreeView/: CMakeLists.txt  FileTreeModel.cpp  FileTreeModel.h  Main.qml  main.cpp
QML/ImageViewer/: CMakeLists.txt  HoverButton.qml  Resources.qrc  main.cpp  main.qml
QML/ImageViewerLocal/: CMakeLists.txt  ImagePage.qml  dirhelper.cpp  dirhelper.h  main.cpp  main.qml
QML/LoginComponent/: CMakeLists.txt  Login.qml  main.cpp  main.qml
QML/NumberConverter/: CMakeLists.txt  main.cpp  main.qml
QML/OwnerDrawnComboBox/: CMakeLists.txt  ColorCombo.qml  main.cpp  main.qml
QML/OwnerDrawnListView/: CMakeLists.txt  ColorDelegate.qml  ColorModel.qml  main.cpp  main.qml
QML/PassingValueBwPages/: CMakeLists.txt  Page1.qml  Page2.qml  main.cpp  main.qml
QML/PassingValuesBwPageAlternate/: CMakeLists.txt  Page2.qml  main.cpp  main.qml
QML/QMLCppIntegrationExample/: CMakeLists.txt  machine.cpp  machine.h  main.cpp  main.qml
QML/QMLCppIntro/: CMakeLists.txt  main.cpp  main.qml  test.cpp  test.h
QML/QMLCppRegisterCppClass/: CMakeLists.txt  main.cpp  main.qml  test.cpp  test.h
QML/Quick1/: CMakeLists.txt  MyButton.qml  main.cpp  main.qml
QML/Quick2/: CMakeLists.txt  MyShape.qml  main.cpp  main.qml
QML/Quick3/: CMakeLists.txt  MyShape.qml  main.cpp  main.qml
QML/QuickControlCheckBox/: CMakeLists.txt  main.cpp  main.qml
QML/QuickControlCheckBoxDelegate/: CMakeLists.txt  main.cpp  main.qml
QML/QuickControlComboBox/: CMakeLists.txt  main.cpp  main.qml
QML/QuickControlFrameAndPopUp/: CMakeLists.txt  main.cpp  main.qml
QML/QuickControlImageViewer/: CMakeLists.txt  Resources.qrc  main.cpp  main.qml
QML/QuickControlSliders/: main.cpp  (+2 more)
QML/QuickControlTumbler/: CMakeLists.txt  main.cpp  main.qml
QML/StackViewApplication/: CMakeLists.txt  Home.qml  Page1.qml  Page2.qml  main.cpp  main.qml
QML/SwipeViewApplication/: CMakeLists.txt  Page1.qml  Page2.qml  main.cpp  main.qml
(+47 files in other folders)
